--- a/style.css
+++ b/style.css
@@ -111,6 +111,8 @@ h2 {
     position: relative;
 }
 
+
+
 .duvida h3 {
     border: 2px solid #ff725e;
     border-radius: 8px;
@@ -130,8 +132,18 @@ h2 {
     border-left: 1px solid #FF725E;
     border-radius: 0 0 8px 8px;
     margin-top: -8px;
-    padding: 24px;
+    padding: 0 24px;
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: .2s;
 }
+.duvida.ativa .paragrafo{
+    padding: 24px;
+    height: fit-content;
+    opacity: 1;
+}
+
 footer{
     background-color: rgba(255, 152, 108, 25%);
     display: flex;
